# Simple-Glimac-Setup

./: CMakeLists.txt  README.md
CMakeUtils/: README.md  files_and_folders.cmake  visual_studio_helpers.cmake
TP1/: main.cpp
TP2/: App.cpp  main.cpp
TP3/: App.cpp  main.cpp
TP4/: App.cpp  main.cpp
TP5/: App.cpp  main.cpp
TP6/: App.cpp  main.cpp
TP7/: App.cpp  main.cpp
TP8/: App.cpp  main.cpp
TP9/: App.cpp  main.cpp
glimac/: CMakeLists.txt
lib/glimac/glimac/: Program.hpp  Shader.hpp
